<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".SearchActivity">

    //madison's new code start

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/customborder">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_sports_soccer_24"
            android:background="@color/white"
            app:tint="@color/our_grey"
            android:text="home"/>

        <ImageButton
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_search_24"
            android:background="@color/white"
            app:tint="@color/our_blue" />

        <ImageButton
            android:id="@+id/follow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_star_24"
            android:background="@color/white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        app:tint="@color/our_blue" />
    // end of new code

    <TextView
        android:id="@+id/search_fixtures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="center_horizontal|top"
        android:text="@string/find_fixtures_title"
        android:textColor="@color/our_blue"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/search_by_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/search_by_city"
        android:textColor="@color/our_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/city_team_box"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/drop_shadow"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#7E7E7E" />

    <TextView
        android:id="@+id/select_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/select_dates"
        android:textColor="@color/our_blue"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dates"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/drop_shadow"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="20dp"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="@color/our_grey" />

    <ImageView
        android:id="@+id/imageworld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dates"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="92dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/search_world" />

    <TextView
        android:id="@+id/where_would"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageworld"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/search_label"
        android:textColor="@color/our_grey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/where_would"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/our_blue"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/search_button_text"
        android:textSize="20sp"
        app:cornerRadius="5dp" />

</RelativeLayout>